# pyTBC

./: .gitignore  README.md  pyTBC_example.ipynb  setup.cfg  setup.py  tbc_example.ipynb
docs/: Makefile
docs/source/: conf.py  index.rst
examples/: example1.ipynb  example2.ipynb
pyTBC/: TraceBasedClustering.py  __init__.py
src/pyTBC/: __init__.py
tbc/: TraceBasedClustering.py  __init__.py
