[metadata]
name = pyTBC
version = attr: pyTBC.__version__
description = pyTBC is a python library which implements Trace-based clustering technique
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, data-mining, data-science, machine-learning, clustering, trace-based-clustering
license = BSD-3-Clause
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
author = Antonio López Martínez-Carrasco
author_email = antoniolopezmc1995@gmail.com
maintainer = Antonio López Martínez-Carrasco
maintainer_email = antoniolopezmc1995@gmail.com
url = https://github.com/antoniolopezmc/pyTBC

[options]
python_requires = >=3.10.9
zip_safe = False
include_package_data = False
packages = find:
install_requires =
    pandas>=1.5.3
    scikit-learn>=1.2.1
    seaborn>=0.12.2
    matplotlib>=3.7.0

[options.packages.find]
where = .
include =
    pyTBC
    pyTBC.*
exclude =
    build*
    dist*
    docs*
